# rust-cli-application-with-ratatui

./: Cargo.toml  README.md
src/: app.rs  connection.rs  event.rs  handler.rs  lib.rs  main.rs  tui.rs  ui.rs
