[package]
name = "ratatui_templates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.25.0"
tokio = { version = "1.35.1", features = ["full"] }
chrono = "0.4.37"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
